force-app/main/default/objects/Student_Engagement__c/Student_Engagement__c.object-meta.xml
<CustomObject>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To Track Geekwise Student Interactions, Volunteering, etc.</description>
    <label>Student Engagement</label>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Student Engagement #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Engagements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>