force-app/main/default/objects/Student_Engagement__c/fields/Engagement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Notes__c</fullName>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To Track student engagements with Geekwise academy employees
Populated: Manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Engagement Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>