force-app/main/default/objects/Student_Engagement__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To Track student engagements with Geekwise academy employees
Populated: Manually</description>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One on One</fullName>
            </value>
            <value>
                <fullName>Volunteered</fullName>
                <label>Volunteering</label>
            </value>
            <value>
                <fullName>Cohort Recommendation</fullName>
            </value>
            <value>
                <fullName>Apprenticeship Recommendation</fullName>
            </value>
            <value>
                <fullName>Counseling</fullName>
            </value>
            <value>
                <fullName>Resume Submitted</fullName>
            </value>
            <value>
                <fullName>Professional Development</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Attendance</fullName>
            </value>
            <value>
                <fullName>Nomination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>