force-app/main/default/objects/Student_Engagement__c/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To Track follow-up on student engagements with Geekwise academy employees
Populated: Manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Follow-Up Date</label>
    <type>Date</type>
</CustomField>