force-app/main/default/objects/Student_Engagement__c/fields/Follow_Up_Needed__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To Track if student engagements with Geekwise academy employees need follow-up action.
Populated: Manually</description>
    <label>Follow-Up Needed</label>
    <type>Checkbox</type>
</CustomField>