force-app/main/default/objects/Student_Engagement__c/fields/ILO_Score__c.field-meta.xml
<CustomField>
    <fullName>ILO_Score__c</fullName>
    <formula>TEXT(Student__r.ILO_Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ILO Score</label>
    <type>Text</type>
</CustomField>