force-app/main/default/objects/Student_Engagement__c/fields/SOM_Score__c.field-meta.xml
<CustomField>
    <fullName>SOM_Score__c</fullName>
    <formula>TEXT(Student__r.SOM_Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOM Score</label>
    <type>Text</type>
</CustomField>