force-app/main/default/objects/Student_Engagement__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To Track student engagements with Geekwise academy students
Populated: Manually</description>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Engagements (Student)</relationshipLabel>
    <relationshipName>Student_Engagements1</relationshipName>
    <type>Lookup</type>
</CustomField>