force-app/main/default/objects/Student_Engagement__c/fields/Student_Engagement_Owner__c.field-meta.xml
<CustomField>
    <fullName>Student_Engagement_Owner__c</fullName>
    <formula>IF (CreatedBy.Id =  $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Engagement Owner</label>
    <type>Checkbox</type>
</CustomField>