force-app/main/default/objects/Student_Engagement__c/fields/WFT_Staff_Member__c.field-meta.xml
<CustomField>
    <fullName>WFT_Staff_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: JA
Purpose: To track who had student engagements with Workforce Training students</description>
    <label>WFT Staff Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Engagements (WFT Staff Member)</relationshipLabel>
    <relationshipName>Student_Engagements2</relationshipName>
    <type>Lookup</type>
</CustomField>