force-app/main/default/objects/Student_Engagement__c/listViews/My_Student_Engagements_All.listView-meta.xml
<ListView>
    <fullName>My_Student_Engagements_All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Student__c</columns>
    <columns>Engagement_Notes__c</columns>
    <columns>Engagement_Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Student Engagements - All</label>
</ListView>