force-app/main/default/objects/Student_Engagement__c/listViews/Student_Engagements.listView-meta.xml
<ListView>
    <fullName>Student_Engagements</fullName>
    <columns>NAME</columns>
    <columns>Engagement_Type__c</columns>
    <columns>Student__c</columns>
    <columns>WFT_Staff_Member__c</columns>
    <columns>Engagement_Notes__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Student_Engagement_Owner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Student Engagements (Today)</label>
    <sharedTo>
        <group>VP_Team</group>
        <group>Workforce_Training_Team</group>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>